@@ -1,3 +1,7 @@
+2012-10-23  Marc Glisse  <marc.glisse@inria.fr>
+
+	* gcc.dg/tree-ssa/foldconst-6.c: New testcase.
+
 2012-10-23  Jan Hubicka  <jh@suse.cz>
 
 	PR middle-end/54937
